<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".UI.homescreenActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="10">

        <RelativeLayout
            android:id="@+id/header"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_weight="7">

            <ImageView
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:paddingLeft="0dp"
                android:paddingRight="0dp"
                android:src="@drawable/app_logo"/>

        </RelativeLayout>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            android:src="@drawable/background"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20sp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingHorizontal="50dp"
                android:text="Welcome To Arunachal Arogya Clinic"
                android:scaleX="1.1"
                android:textColor="#000"
                android:textSize="20sp"
                android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/desc"
            android:paddingHorizontal="30dp"
            android:textColor="#000"
            android:paddingVertical="5dp"
            android:textSize="14sp"
            android:gravity="center"
            />
        </LinearLayout>
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/google_signin"
        android:paddingHorizontal="30dp"
        android:textColor="#212121"
        android:paddingTop="25dp"
        android:textSize="14sp"
        android:gravity="center"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/google_signin_hindi"
        android:paddingHorizontal="30dp"
        android:textColor="#212121"
        android:textStyle="italic"
        android:textSize="14sp"
        android:gravity="center"
        />

<!--    <LinearLayout-->

<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:orientation="horizontal"-->
<!--        android:layout_gravity="center"-->
<!--        android:paddingVertical="10dp"-->
<!--        android:weightSum="10">-->
        <TextView
            android:id="@+id/hub_usersignin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Sign In for Hub Users"
            android:textSize="14sp"
            android:layout_marginHorizontal="30dp"
            android:layout_marginVertical="5dp"
            android:gravity="center"
            android:padding="10dp"
            android:textColor="#155469"
            android:layout_gravity="center"
            android:background="@drawable/button_background"
            />

        <TextView
            android:id="@+id/spoke_usersignin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Sign In for Spoke Users"
            android:textSize="14sp"
            android:layout_marginHorizontal="30dp"
            android:layout_marginVertical="5dp"
            android:gravity="center"
            android:padding="10dp"
            android:textColor="#155469"
            android:layout_gravity="center"
            android:background="@drawable/button_background"
            />
<!--    </LinearLayout>-->


    <TextView
        android:id="@+id/tv_google_signin_assist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/google_signin_assist"
        android:paddingHorizontal="30dp"
        android:textColor="#212121"
        android:paddingTop="50dp"
        android:textSize="14sp"
        android:gravity="center"
        />
    <TextView
        android:id="@+id/tv_google_signin_assist_hindi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/google_signin_assist_hindi"
        android:paddingHorizontal="30dp"
        android:textColor="#212121"
        android:textStyle="italic"
        android:textSize="14sp"
        android:gravity="center"
        />

            <TextView
                android:id="@+id/tv_click_here"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Click here"
                android:textSize="14sp"
                android:layout_weight="5"
                android:layout_marginHorizontal="20dp"
                android:layout_marginVertical="10dp"
                android:gravity="center"
                android:padding="10dp"
                android:textColor="#155469"
                android:background="@drawable/button_background2"
                android:paddingHorizontal="10dp"
                />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="50dp"
        android:gravity="center"
        android:orientation="horizontal">

    <TextView
        android:id="@+id/tv_privacy_policy"
        android:text="@string/privacy_policy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#267f9a"
        android:paddingHorizontal="5dp"
        android:textSize="14sp"
        android:gravity="center"
        />
        <TextView
            android:id="@+id/tv_terms"
            android:text="@string/terms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#267f9a"
            android:paddingHorizontal="5dp"
            android:textSize="14sp"
            android:gravity="center"
            />
        <TextView
            android:id="@+id/tv_contact"
            android:text="@string/contact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#267f9a"
            android:paddingHorizontal="5dp"
            android:textSize="14sp"
            android:gravity="center"
            />
       </LinearLayout>
<!--    <TextView-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="@string/copyright_text"-->
<!--        android:paddingHorizontal="30dp"-->
<!--        android:textColor="#212121"-->
<!--        android:textStyle="italic"-->
<!--        android:textSize="14sp"-->
<!--        android:gravity="center"-->
<!--        />-->
        </LinearLayout>
    </ScrollView>

</LinearLayout>